Added drape_frontend and drape_frontend_tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ add_subdirectory(geometry)
 add_subdirectory(platform)
 add_subdirectory(3party/opening_hours)
 add_subdirectory(stats)
+add_subdirectory(drape_frontend)
 add_subdirectory(storage)
 add_subdirectory(editor)
 add_subdirectory(indexer)
