--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,3 +160,5 @@ add_subdirectory(indexer)
 add_subdirectory(routing)
 add_subdirectory(search)
 add_subdirectory(tracking)
+add_subdirectory(traffic)
+add_subdirectory(partners_api)
