Add python bindings for traffic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,4 +159,5 @@ add_subdirectory(editor)
 add_subdirectory(indexer)
 add_subdirectory(routing)
 add_subdirectory(search)
+add_subdirectory(traffic)
 add_subdirectory(tracking)
