--- a/tracking/tracking_tests/CMakeLists.txt
+++ b/tracking/tracking_tests/CMakeLists.txt
@@ -10,7 +10,8 @@ omim_add_test(${PROJECT_NAME} ${SRC})
 
 omim_link_libraries(
   ${PROJECT_NAME}
-  tracking platform
+  tracking
+  platform
   platform_tests_support
   coding
   base
@@ -19,12 +20,3 @@ omim_link_libraries(
   ${LIBZ}
   ${Qt5Widgets_LIBRARIES}
 )
-
-if (${PLATFORM_MAC})
-  omim_link_libraries(
-    ${PROJECT_NAME}
-    "-framework Cocoa"
-    "-framework IOKit"
-    "-framework SystemConfiguration"
-  )
-endif()
