--- a/traffic/CMakeLists.txt
+++ b/traffic/CMakeLists.txt
@@ -11,4 +11,4 @@ set(
 add_library(${PROJECT_NAME} ${SRC})
 
 add_subdirectory(pytraffic)
-#add_subdirectory(traffic_tests)
+add_subdirectory(traffic_tests)
