--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,8 +104,8 @@ function(omim_add_test_subdirectory subdir)
   endif()
 endfunction()
 
-function(omim_link_platform_if_needed target)
-  if (";${ARGN};" MATCHES ";platform;")
+function(omim_link_platform_deps target)
+  if ("${ARGN}" MATCHES "platform")
     if (PLATFORM_MAC)
       target_link_libraries(
         ${target}
@@ -121,7 +121,7 @@ endfunction()
 function(omim_link_libraries target)
   if (TARGET ${target})
     target_link_libraries(${target} ${ARGN} ${CMAKE_THREAD_LIBS_INIT})
-    omim_link_platform_if_needed(${target} ${ARGN})
+    omim_link_platform_deps(${target} ${ARGN})
   else()
     message("~> Skipping linking the libraries to the target ${target} as it does not exist")
   endif()
