[settings] [ios] Set build number to 0.

--- a/iphone/Maps/MAPSME.plist
+++ b/iphone/Maps/MAPSME.plist
@@ -71,6 +71,8 @@
 			</array>
 		</dict>
 	</array>
+	<key>CFBundleVersion</key>
+	<string>0</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
