--- a/3party/opening_hours/CMakeLists.txt
+++ b/3party/opening_hours/CMakeLists.txt
@@ -15,9 +15,14 @@ set(
   opening_hours.hpp
   opening_hours.cpp
   opening_hours_parsers.hpp
-  opening_hours_parsers_terminals.hpp
+  opening_hours_parsers_terminals.cpp
   parse_opening_hours.hpp
   parse_opening_hours.cpp
+  parse_years.cpp
+  parse_weekdays.cpp
+  parse_weeks.cpp
+  parse_timespans.cpp
+  parse_months.cpp
   rules_evaluation_private.hpp
   rules_evaluation.hpp
   rules_evaluation.cpp
