--- a/indexer/CMakeLists.txt
+++ b/indexer/CMakeLists.txt
@@ -6,6 +6,8 @@ set(
   SRC
   altitude_loader.cpp
   altitude_loader.hpp
+  banners.cpp
+  banners.hpp
   categories_holder_loader.cpp
   categories_holder.cpp
   categories_holder.hpp
