CMake build fix.

--- a/traffic/CMakeLists.txt
+++ b/traffic/CMakeLists.txt
@@ -4,6 +4,8 @@ set(
   SRC
   speed_groups.cpp
   speed_groups.hpp
+  traffic_cache.cpp
+  traffic_cache.hpp
   traffic_info.cpp
   traffic_info.hpp
 )
