[core] uber into place page

--- a/map/CMakeLists.txt
+++ b/map/CMakeLists.txt
@@ -45,6 +45,8 @@ set(
   mwm_url.hpp
   place_page_info.cpp
   place_page_info.hpp
+  reachable_by_taxi_checker.сpp
+  reachable_by_taxi_checker.hpp
   track.cpp
   track.hpp
   traffic_manager.cpp
