--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -188,7 +188,8 @@
         android:name="com.mapswithme.maps.downloader.DownloaderActivity"
         android:configChanges="orientation|screenLayout|screenSize"
         android:label="@string/download_maps"
-        android:parentActivityName="com.mapswithme.maps.MwmActivity">
+        android:parentActivityName="com.mapswithme.maps.MwmActivity"
+        android:windowSoftInputMode="adjustResize">
       <!-- The meta-data element is needed for versions lower than 4.1 -->
       <meta-data
           android:name="android.support.PARENT_ACTIVITY"
@@ -200,7 +201,7 @@
         android:configChanges="orientation|screenLayout|screenSize"
         android:label="@string/search_map"
         android:parentActivityName="com.mapswithme.maps.MwmActivity"
-        android:windowSoftInputMode="stateVisible|adjustNothing">
+        android:windowSoftInputMode="stateVisible|adjustResize">
       <!-- The meta-data element is needed for versions lower than 4.1 -->
       <meta-data
           android:name="android.support.PARENT_ACTIVITY"
@@ -222,7 +223,8 @@
         android:name="com.mapswithme.maps.bookmarks.BookmarkCategoriesActivity"
         android:configChanges="orientation|screenLayout|screenSize"
         android:label="@string/bookmark_sets"
-        android:parentActivityName="com.mapswithme.maps.MwmActivity">
+        android:parentActivityName="com.mapswithme.maps.MwmActivity"
+        android:windowSoftInputMode="adjustResize">
       <!-- The meta-data element is needed for versions lower than 4.1 -->
       <meta-data
           android:name="android.support.PARENT_ACTIVITY"
@@ -233,7 +235,8 @@
         android:name="com.mapswithme.maps.bookmarks.BookmarkListActivity"
         android:configChanges="orientation|screenLayout|screenSize"
         android:label="@string/bookmarks"
-        android:parentActivityName="com.mapswithme.maps.bookmarks.BookmarkCategoriesActivity">
+        android:parentActivityName="com.mapswithme.maps.bookmarks.BookmarkCategoriesActivity"
+        android:windowSoftInputMode="adjustResize">
       <!-- The meta-data element is needed for versions lower than 4.1 -->
       <meta-data
           android:name="android.support.PARENT_ACTIVITY"
