--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,6 +41,8 @@ dependencies {
   compile 'com.google.android.gms:play-services-analytics:8.4.0'
   compile 'com.google.android.gms:play-services-plus:8.4.0'
   compile 'com.google.android.gms:play-services-gcm:8.4.0'
+  // statistics
+  compile 'com.flurry.android:analytics:6.7.0'
   // crash reporting
   compile 'net.hockeyapp.android:HockeySDK:3.7.1'
   compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') { transitive = true }
