--- a/indexer/CMakeLists.txt
+++ b/indexer/CMakeLists.txt
@@ -140,4 +140,5 @@ file(COPY ${OTHER_FILES} DESTINATION ${CMAKE_BINARY_DIR})
 
 add_library(${PROJECT_NAME} ${SRC})
 
+omim_add_test_subdirectory(indexer_tests_support)
 #omim_add_test_subdirectory(indexer_tests)
