--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -1,1 +1,93 @@
+project(generator)
+
+include_directories(
+  ${OMIM_ROOT}/3party/gflags/src
+  ${OMIM_ROOT}/3party/osrm/osrm-backend/include
+  ${OMIM_ROOT}/3party/jansson/src
+)
+
+set(SRC
+  altitude_generator.cpp
+  altitude_generator.hpp
+  booking_dataset.cpp
+  booking_dataset.hpp
+  booking_scoring.cpp
+  borders_generator.cpp
+  borders_generator.hpp
+  borders_loader.cpp
+  borders_loader.hpp
+  centers_table_builder.cpp
+  centers_table_builder.hpp
+  check_model.cpp
+  check_model.hpp
+  coastlines_generator.cpp
+  coastlines_generator.hpp
+  dumper.cpp
+  dumper.hpp
+  feature_builder.cpp
+  feature_builder.hpp
+  feature_emitter_iface.hpp
+  feature_generator.cpp
+  feature_generator.hpp
+  feature_merger.cpp
+  feature_merger.hpp
+  feature_sorter.cpp
+  feature_sorter.hpp
+  gen_mwm_info.hpp
+  generate_info.hpp
+  intermediate_data.hpp
+  intermediate_elements.hpp
+  opentable_dataset.cpp
+  opentable_dataset.hpp
+  opentable_scoring.cpp
+  osm2meta.cpp
+  osm2meta.hpp
+  osm2type.cpp
+  osm2type.hpp
+  osm_element.cpp
+  osm_element.hpp
+  osm_id.cpp
+  osm_id.hpp
+  osm_o5m_source.hpp
+  osm_source.cpp
+  osm_translator.hpp
+  osm_xml_source.hpp
+  polygonizer.hpp
+  region_meta.cpp
+  region_meta.hpp
+  restriction_collector.cpp
+  restriction_collector.hpp
+  restriction_generator.cpp
+  restriction_generator.hpp
+  restriction_writer.cpp
+  restriction_writer.hpp
+  routing_generator.cpp
+  routing_generator.hpp
+  routing_index_generator.cpp
+  routing_index_generator.hpp
+  search_index_builder.cpp
+  search_index_builder.hpp
+  sponsored_dataset.hpp
+  sponsored_dataset_inl.hpp
+  sponsored_scoring.cpp
+  sponsored_scoring.hpp
+  srtm_parser.cpp
+  srtm_parser.hpp
+  statistics.cpp
+  statistics.hpp
+  tag_admixer.hpp
+  tesselator.cpp
+  tesselator.hpp
+  towns_dumper.cpp
+  towns_dumper.hpp
+  traffic_generator.cpp
+  traffic_generator.hpp
+  unpack_mwm.cpp
+  unpack_mwm.hpp
+  ways_merger.hpp
+  world_map_generator.hpp
+)
+
+add_library(${PROJECT_NAME} ${SRC})
+
 omim_add_test_subdirectory(generator_tests_support)
