[routing] Invert index graph
Change graph vertex from Joint::Id to Segment

--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -95,6 +95,7 @@ set(
   routing_session.cpp
   routing_session.hpp
   routing_settings.hpp
+  segment.hpp
   single_mwm_router.cpp
   single_mwm_router.hpp
   speed_camera.cpp
