Added graphics benchmark

--- a/drape_frontend/CMakeLists.txt
+++ b/drape_frontend/CMakeLists.txt
@@ -150,6 +150,8 @@ set(
   route_shape.hpp
   rule_drawer.cpp
   rule_drawer.hpp
+  scenario_manager.cpp
+  scenario_manager.hpp
   screen_animations.cpp
   screen_animations.hpp
   screen_operations.cpp
