[storyboard] [ios] Storyboard menagement cleanup.

--- a/iphone/Maps/MAPSME.plist
+++ b/iphone/Maps/MAPSME.plist
@@ -191,7 +191,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Mapsme</string>
+	<string>Main</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIStatusBarHidden</key>
