[search] SmallSet for languages.

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -42,6 +42,7 @@ set(
   set_operations.hpp
   shared_buffer_manager.cpp
   shared_buffer_manager.hpp
+  small_set.hpp
   src_point.cpp
   src_point.hpp
   stats.hpp
