--- a/base/base_tests/CMakeLists.txt
+++ b/base/base_tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(
   regexp_test.cpp
   rolling_hash_test.cpp
   scope_guard_test.cpp
+  small_set_test.cpp
   stl_add_test.cpp
   stl_helpers_test.cpp
   string_format_test.cpp
