--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,6 +38,7 @@ dependencies {
   compile 'com.android.support:cardview-v7:22.2.1'
   // google play services
   compile 'com.google.android.gms:play-services-location:8.4.0'
+  compile 'com.google.android.gms:play-services-ads:8.4.0'
   compile 'com.google.android.gms:play-services-analytics:8.4.0'
   compile 'com.google.android.gms:play-services-plus:8.4.0'
   compile 'com.google.android.gms:play-services-gcm:8.4.0'
@@ -48,6 +49,7 @@ dependencies {
   compile('com.crashlytics.sdk.android:crashlytics-ndk:1.1.2@aar') { transitive = true }
   // 3-party
   compile 'com.facebook.android:facebook-android-sdk:4.8.0'
+  compile 'com.facebook.android:audience-network-sdk:4.8.0'
   compile 'com.google.code.gson:gson:2.6.1'
   compile 'com.pushwoosh:pushwoosh:4.10.7'
   compile 'com.my.tracker:mytracker-sdk:1.3.5'
@@ -62,6 +64,9 @@ dependencies {
   compile 'com.github.bumptech.glide:glide:3.7.0'
   // Java concurrency annotations
   compile 'net.jcip:jcip-annotations:1.0'
+
+  //MultiDex
+  compile 'com.android.support:multidex:1.0.1'
 }
 
 def getDate() {
@@ -107,6 +112,9 @@ android {
     manifestPlaceholders += ['PW_APPID': pwProps['pwAppId']]
     buildConfigField 'String', 'PW_APPID', /"${pwProps['pwAppId']}"/
     manifestPlaceholders += ['PW_PROJECT_ID': pwProps['pwProjectId']]
+
+    //MultiDex
+    multiDexEnabled true
   }
 
   sourceSets.main {
