--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,7 +38,6 @@ dependencies {
   compile 'com.android.support:cardview-v7:22.2.1'
   // google play services
   compile 'com.google.android.gms:play-services-location:8.4.0'
-  compile 'com.google.android.gms:play-services-ads:8.4.0'
   compile 'com.google.android.gms:play-services-analytics:8.4.0'
   compile 'com.google.android.gms:play-services-plus:8.4.0'
   compile 'com.google.android.gms:play-services-gcm:8.4.0'
@@ -49,7 +48,9 @@ dependencies {
   compile('com.crashlytics.sdk.android:crashlytics-ndk:1.1.2@aar') { transitive = true }
   // 3-party
   compile 'com.facebook.android:facebook-android-sdk:4.8.0'
-  compile 'com.facebook.android:audience-network-sdk:4.8.0'
+  compile('com.facebook.android:audience-network-sdk:4.8.0') {
+    exclude group: 'com.google.android.gms'
+  }
   compile 'com.google.code.gson:gson:2.6.1'
   compile 'com.pushwoosh:pushwoosh:4.10.7'
   compile 'com.my.tracker:mytracker-sdk:1.3.5'
@@ -64,9 +65,6 @@ dependencies {
   compile 'com.github.bumptech.glide:glide:3.7.0'
   // Java concurrency annotations
   compile 'net.jcip:jcip-annotations:1.0'
-
-  //MultiDex
-  compile 'com.android.support:multidex:1.0.1'
 }
 
 def getDate() {
@@ -112,9 +110,6 @@ android {
     manifestPlaceholders += ['PW_APPID': pwProps['pwAppId']]
     buildConfigField 'String', 'PW_APPID', /"${pwProps['pwAppId']}"/
     manifestPlaceholders += ['PW_PROJECT_ID': pwProps['pwProjectId']]
-
-    //MultiDex
-    multiDexEnabled true
   }
 
   sourceSets.main {
