--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:+'
+    classpath 'com.android.tools.build:gradle:2.2.3'
     classpath 'io.fabric.tools:gradle:1.+'
   }
 }
