[search] Ranking with errors.

--- a/search/search_integration_tests/CMakeLists.txt
+++ b/search/search_integration_tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(
   interactive_search_test.cpp
   pre_ranker_test.cpp
   processor_test.cpp
+  ranker_test.cpp
   search_edited_features_test.cpp
   smoke_test.cpp
 )
