Upgraded stb lib, removed lodepng

--- a/drape/drape_tests/CMakeLists.txt
+++ b/drape/drape_tests/CMakeLists.txt
@@ -61,6 +61,9 @@ omim_link_libraries(
   stats_client
   freetype
   gmock
+  stb_image
+  sdf_image
+  ${Qt5Core_LIBRARIES}
   ${Qt5Gui_LIBRARIES}
   ${Qt5Widgets_LIBRARIES}
   ${LIBZ}
