--- a/storage/storage_tests/CMakeLists.txt
+++ b/storage/storage_tests/CMakeLists.txt
@@ -52,6 +52,8 @@ omim_link_libraries(
   minizip
   succinct
   pugixml
+  stb_image
+  sdf_image
   ${Qt5Widgets_LIBRARIES}
   ${Qt5Network_LIBRARIES}
   ${LIBZ}
