--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,6 @@ add_subdirectory(3party/freetype)
 add_subdirectory(3party/fribidi)
 add_subdirectory(3party/expat)
 add_subdirectory(map)
-add_subdirectory(drape)
 
 if (PLATFORM_DESKTOP)
   add_subdirectory(3party/libtess2)
@@ -207,6 +206,8 @@ add_compile_options(
   "-std=c++11"
 )
 
+add_subdirectory(3party/stb_image)
+add_subdirectory(3party/sdf_image)
 add_subdirectory(3party/protobuf)
 add_subdirectory(3party/liboauthcpp)
 add_subdirectory(3party/pugixml)
@@ -219,6 +220,7 @@ add_subdirectory(geometry)
 add_subdirectory(platform)
 add_subdirectory(3party/opening_hours)
 add_subdirectory(stats)
+add_subdirectory(drape)
 add_subdirectory(drape_frontend)
 add_subdirectory(storage)
 add_subdirectory(editor)
