[place-page] [ios] Added network frameworks:
Alamofire
AlamofireImage

--- a/xcode/common.xcconfig
+++ b/xcode/common.xcconfig
@@ -21,41 +21,42 @@ OTHER_LDFLAGS[sdk=macosx*] = -framework Cocoa -framework IOKit -framework OpenGL
 OTHER_LDFLAGS[sdk=iphone*] = -framework AdSupport -framework CoreGraphics -framework Foundation -framework IOKit -framework OpenGLES -framework SystemConfiguration -framework UIKit -framework CFNetwork
 
 // Warnings settings
-CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
 CLANG_WARN_BOOL_CONVERSION = YES
 CLANG_WARN_CONSTANT_CONVERSION = YES
+CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 CLANG_WARN_DIRECT_OBJC_ISA_USAGE = YES_ERROR
 CLANG_WARN_EMPTY_BODY = YES
 CLANG_WARN_ENUM_CONVERSION = YES
+CLANG_WARN_INFINITE_RECURSION = YES
 CLANG_WARN_INT_CONVERSION = YES
+CLANG_WARN_NULLABLE_TO_NONNULL_CONVERSION = YES
+CLANG_WARN_OBJC_EXPLICIT_OWNERSHIP_TYPE = YES
+CLANG_WARN_OBJC_IMPLICIT_ATOMIC_PROPERTIES = YES
+CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
+CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
 CLANG_WARN_OBJC_ROOT_CLASS = YES_ERROR
 CLANG_WARN_SUSPICIOUS_MOVE = YES
 CLANG_WARN_UNREACHABLE_CODE = YES
-CLANG_WARN_NULLABLE_TO_NONNULL_CONVERSION = YES
-CLANG_WARN_INFINITE_RECURSION = YES
-CLANG_WARN_OBJC_IMPLICIT_ATOMIC_PROPERTIES = YES
-CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
-CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
-CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
-CLANG_WARN_OBJC_EXPLICIT_OWNERSHIP_TYPE = YES
-GCC_WARN_STRICT_SELECTOR_MATCH = YES
+CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
 GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 GCC_WARN_ABOUT_RETURN_TYPE = YES_ERROR
+GCC_WARN_STRICT_SELECTOR_MATCH = YES
 GCC_WARN_UNDECLARED_SELECTOR = YES
 GCC_WARN_UNINITIALIZED_AUTOS = YES_AGGRESSIVE
 GCC_WARN_UNUSED_FUNCTION = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 
 // Build options
+ALWAYS_SEARCH_USER_PATHS = NO
+CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
 CLANG_CXX_LANGUAGE_STANDARD = c++0x
 CLANG_ENABLE_MODULES = YES
 CLANG_ENABLE_OBJC_ARC = YES
-CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
 CODE_SIGN_IDENTITY[sdk=iphoneos*] = iPhone Developer
 DEBUG_INFORMATION_FORMAT = dwarf
 ENABLE_STRICT_OBJC_MSGSEND = YES
 GCC_NO_COMMON_BLOCKS = YES
 GCC_PRECOMPILE_PREFIX_HEADER = YES
 ONLY_ACTIVE_ARCH = YES
-VALID_ARCHS = i386 x86_64 armv7 armv7s arm64
 PRODUCT_NAME = $(TARGET_NAME)
+VALID_ARCHS = i386 x86_64 armv7 armv7s arm64
