[android] Increased build tools version

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,7 +3,7 @@ propMinSdkVersion=15
 # https://code.google.com/p/android/issues/detail?id=184567
 propTargetSdkVersion=22
 propCompileSdkVersion=23
-propBuildToolsVersion=25
+propBuildToolsVersion=25.0.2
 propVersionCode=720
 propVersionName=7.2.0
 propDebugNdkFlags=V=1 NDK_DEBUG=1 DEBUG=1
