[routing] [generator] A component to store road accessibility info.

--- a/generator/generator_tests/CMakeLists.txt
+++ b/generator/generator_tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set(
   osm_id_test.cpp
   osm_o5m_source_test.cpp
   osm_type_test.cpp
+  road_access_test.cpp
   restriction_collector_test.cpp
   restriction_test.cpp
   source_data.cpp
