--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -77,6 +77,9 @@ set(
   restriction_loader.hpp
   restrictions_serialization.cpp
   restrictions_serialization.hpp
+  road_access.hpp
+  road_access_serialization.cpp
+  road_access_serialization.hpp
   road_graph.cpp
   road_graph.hpp
   road_graph_router.cpp
