--- a/drape_frontend/CMakeLists.txt
+++ b/drape_frontend/CMakeLists.txt
@@ -61,6 +61,7 @@ set(
   color_constants.hpp
   colored_symbol_shape.cpp
   colored_symbol_shape.hpp
+  custom_symbol.hpp
   drape_api.cpp
   drape_api.hpp
   drape_api_builder.cpp
