--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -77,6 +77,7 @@ set(
   restriction_loader.hpp
   restrictions_serialization.cpp
   restrictions_serialization.hpp
+  road_access.cpp
   road_access.hpp
   road_access_serialization.cpp
   road_access_serialization.hpp
