--- a/search/search_quality/CMakeLists.txt
+++ b/search/search_quality/CMakeLists.txt
@@ -16,3 +16,4 @@ add_library(${PROJECT_NAME} ${SRC})
 add_subdirectory(assessment_tool)
 add_subdirectory(features_collector_tool)
 add_subdirectory(search_quality_tool)
+omim_add_test_subdirectory(search_quality_tests)
