--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -23,8 +23,12 @@ set(
   cross_mwm_connector.hpp
   cross_mwm_connector_serialization.cpp
   cross_mwm_connector_serialization.hpp
+  cross_mwm_graph.cpp
+  cross_mwm_graph.hpp
   cross_mwm_index_graph.cpp
   cross_mwm_index_graph.hpp
+  cross_mwm_osrm_graph.cpp
+  cross_mwm_osrm_graph.hpp
   cross_mwm_road_graph.cpp
   cross_mwm_road_graph.hpp
   cross_mwm_router.cpp
