[Designer Tool] Added phone style packaging

--- a/qt/CMakeLists.txt
+++ b/qt/CMakeLists.txt
@@ -26,6 +26,8 @@ set(
   build_style/build_common.h
   build_style/build_drules.cpp
   build_style/build_drules.h
+  build_style/build_phone_pack.cpp
+  build_style/build_phone_pack.h
   build_style/build_skins.cpp
   build_style/build_skins.h
   build_style/build_statistics.cpp
