--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,6 +240,12 @@ add_compile_options(
   "-std=c++11"
 )
 
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(
+    "-Wshorten-64-to-32"
+  )
+endif()
+
 add_subdirectory(3party/stb_image)
 add_subdirectory(3party/sdf_image)
 add_subdirectory(3party/protobuf)
