[routing] Pull request #5689 review fixes

--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -18,6 +18,7 @@ set(
   bicycle_directions.hpp
   car_router.cpp
   car_router.hpp
+  coding.hpp
   cross_mwm_connector.cpp
   cross_mwm_connector.hpp
   cross_mwm_connector_serialization.cpp
