[assessment-tool] Store edits on the model side.

--- a/search/search_quality/assessment_tool/CMakeLists.txt
+++ b/search/search_quality/assessment_tool/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories(${OMIM_ROOT}/3party/glm)
 set(
   SRC
   assessment_tool.cpp
+  context.cpp
+  context.hpp
   edits.cpp
   edits.hpp
   helpers.cpp
