--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,10 +37,10 @@ dependencies {
   compile 'com.android.support:design:23.2.1'
   compile 'com.android.support:cardview-v7:23.2.1'
   // google play services
-  compile 'com.google.android.gms:play-services-location:8.4.0'
-  compile 'com.google.android.gms:play-services-analytics:8.4.0'
-  compile 'com.google.android.gms:play-services-plus:8.4.0'
-  compile 'com.google.android.gms:play-services-gcm:8.4.0'
+  compile 'com.google.android.gms:play-services-location:10.0.1'
+  compile 'com.google.android.gms:play-services-analytics:10.0.1'
+  compile 'com.google.android.gms:play-services-plus:10.0.1'
+  compile 'com.google.android.gms:play-services-gcm:10.0.1'
   // statistics
   compile 'com.flurry.android:analytics:6.7.0'
   // crash reporting
@@ -54,6 +54,7 @@ dependencies {
   compile 'com.google.code.gson:gson:2.6.1'
   compile 'com.pushwoosh:pushwoosh:4.10.7'
   compile 'com.my.tracker:mytracker-sdk:1.3.5'
+  compile 'com.my.target:mytarget-sdk:4.6.9'
   compile fileTree(dir: '3rd_party', include: '*.jar')
   // BottomSheet
   compile project(":3rd_party:BottomSheet")
