--- a/search/search_quality/features_collector_tool/CMakeLists.txt
+++ b/search/search_quality/features_collector_tool/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${OMIM_ROOT}/3party/gflags/src)
 
 set(SRC features_collector_tool.cpp)
 
-add_executable(${PROJECT_NAME} ${SRC})
+omim_add_executable(${PROJECT_NAME} ${SRC})
 
 omim_link_libraries(
   ${PROJECT_NAME}
