Renamed HLA to Local ads

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ data/*.mwm.osm2ft
 data/*.mwm.routing
 data/*.mwmmeta
 data/[!W]*.mwm
-data/hla*.dat
+data/local_ads*.dat
 
 # Compiled Python
 *.pyc
