--- a/partners_api/partners_api_tests/CMakeLists.txt
+++ b/partners_api/partners_api_tests/CMakeLists.txt
@@ -4,8 +4,10 @@ add_definitions(-DOMIM_UNIT_TEST_WITH_QT_EVENT_LOOP)
 
 set(
   SRC
+  ads_engine_tests.cpp
   booking_tests.cpp
   facebook_tests.cpp
+  rb_tests.cpp
   uber_tests.cpp
 )
 
